--- a/stats-preview-card/css/styles.css
+++ b/stats-preview-card/css/styles.css
@@ -1,21 +1,21 @@
 /*
 Error: Invalid CSS after ">>>>>>> gh-pages": expected "{", was "}"
-        on line 220 of styles.scss
+        on line 226 of styles.scss
 
-215: 								border-radius: 1rem 1rem 0rem 0rem;
-216: 								display: block;
-217: 							}
-218: 						}
-219: >>>>>>> gh-pages
-220: 					}
-221: 				}
-222: 			}
-223: 		}
-224: 	}
-225: }
+221: 						}
+222: <<<<<<< HEAD
+223: >>>>>>> gh-pages
+224: =======
+225: >>>>>>> gh-pages
+226: 					}
+227: 				}
+228: 			}
+229: 		}
+230: 	}
+231: }
 
 Backtrace:
-styles.scss:220
+styles.scss:226
 C:/Ruby31-x64/lib/ruby/gems/3.1.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
 C:/Ruby31-x64/lib/ruby/gems/3.1.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1238:in `expected'
 C:/Ruby31-x64/lib/ruby/gems/3.1.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1233:in `tok!'
@@ -92,4 +92,4 @@ C:/Ruby31-x64/lib/ruby/gems/3.1.0/gems/sass-listen-4.0.0/lib/sass-listen/interna
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Invalid CSS after \">>>>>>> gh-pages\": expected \"{\", was \"}\"\A         on line 220 of styles.scss\A \A 215: 								border-radius: 1rem 1rem 0rem 0rem;\A 216: 								display: block;\A 217: 							}\A 218: 						}\A 219: >>>>>>> gh-pages\A 220: 					}\A 221: 				}\A 222: 			}\A 223: 		}\A 224: 	}\A 225: }"; }
+  content: "Error: Invalid CSS after \">>>>>>> gh-pages\": expected \"{\", was \"}\"\A         on line 226 of styles.scss\A \A 221: 						}\A 222: <<<<<<< HEAD\A 223: >>>>>>> gh-pages\A 224: =======\A 225: >>>>>>> gh-pages\A 226: 					}\A 227: 				}\A 228: 			}\A 229: 		}\A 230: 	}\A 231: }"; }
