--- a/stats-preview-card/css/styles.css
+++ b/stats-preview-card/css/styles.css
@@ -1,3 +1,108 @@
+@font-face {
+  font-family: "Inter";
+  src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"); }
+@font-face {
+  font-family: "Lexend-Deca";
+  src: url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+  font-weight: 400; }
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box; }
 
+html {
+  font-size: 100%;
+  font-family: Inter; }
+
+main, main .stats-preview-card, main .stats-preview-card .stats-content .stats-number {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row; }
+
+main {
+  max-width: 100%;
+  min-height: 100vh;
+  background-color: #090b1a;
+  justify-content: center;
+  align-items: center; }
+  main .stats-preview-card {
+    max-width: 60%;
+    border-radius: 1rem; }
+    main .stats-preview-card .stats-content {
+      background-color: #1b1938;
+      width: 50%;
+      padding: 4.5rem 6rem 3rem 4.5rem;
+      border-radius: 1rem 0rem 0rem 1rem; }
+      main .stats-preview-card .stats-content .title {
+        color: #ffffffbf;
+        font-size: 2.4em; }
+        main .stats-preview-card .stats-content .title .insights {
+          color: #aa5cdb; }
+      main .stats-preview-card .stats-content .description {
+        color: #ffffff99;
+        margin: 2rem 0rem 4.5rem 0rem;
+        font-size: 1.1em; }
+      main .stats-preview-card .stats-content .stats-number {
+        justify-content: space-between; }
+        main .stats-preview-card .stats-content .stats-number .stat .number {
+          color: #ffffff;
+          font-size: 1.5em;
+          font-weight: 700; }
+        main .stats-preview-card .stats-content .stats-number .stat .name {
+          color: #ffffff99;
+          text-transform: uppercase; }
+    main .stats-preview-card .image {
+      width: 50%;
+      background-color: #aa5cdb; }
+      main .stats-preview-card .image img {
+        width: 100%;
+        border-radius: 0rem 1rem 1rem 0rem;
+        opacity: 0.6;
+        height: 100%; }
+
+@media screen and (max-width: 1600px) {
+  html {
+    font-size: 90%; }
+    html .stats-preview-card .stats-content {
+      padding: 2rem 4rem 2rem 2.5rem; }
+      html .stats-preview-card .stats-content .description {
+        margin: 1rem 0rem 2.5rem 0rem; } }
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 80%; } }
+@media screen and (max-width: 1030px) {
+  html main .stats-preview-card {
+    flex-direction: column-reverse;
+    max-width: 50%; }
+    html main .stats-preview-card .stats-content {
+      width: 100%;
+      text-align: center;
+      border-radius: 0rem 0rem 1rem 1rem; }
+      html main .stats-preview-card .stats-content .description {
+        line-height: 1.5em; }
+      html main .stats-preview-card .stats-content .stats-number {
+        flex-direction: column; }
+        html main .stats-preview-card .stats-content .stats-number .stat {
+          margin: 1rem 0rem; }
+    html main .stats-preview-card .image {
+      width: 100%;
+      border-radius: 1rem 1rem 0rem 0rem; }
+      html main .stats-preview-card .image img {
+        border-radius: 1rem 1rem 0rem 0rem;
+        display: block; } }
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 80%; }
+    html main {
+      height: 100%; }
+      html main .stats-preview-card .stats-content .description {
+        margin: 1rem 0rem; }
+      html main .stats-preview-card .stats-content .stats-number .stat {
+        margin: 0.8rem 0rem; } }
+@media screen and (max-width: 576px) {
+  html {
+    font-size: 50%; }
+    html main .stats-preview-card {
+      max-width: 80%; } }
 
 /*# sourceMappingURL=styles.css.map */
