--- a/order-summary-component/css/styles.scss
+++ b/order-summary-component/css/styles.scss
@@ -46,9 +46,9 @@ main {
 	background-size: contain;
 	background-color: $clr-pale-blue;
 	.order-summary {
-		max-width: 25%;
-		min-width: 450px;
-		max-width: 450px;
+		width: 30%;
+		// min-width: 450px;
+		// max-width: 450px;
 		max-height: 700px;
 		.image {
 			width: 100%;
@@ -130,4 +130,15 @@ main {
 			}
 		}
 	}
+}
+
+@media screen and (min-width: 1400px) {
+}
+@media screen and (min-width: 1200px) {
+}
+@media screen and (min-width: 992px) {
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 576px) {
 }
