--- a/order-summary-component/css/styles.css
+++ b/order-summary-component/css/styles.css
@@ -28,9 +28,7 @@ main {
   background-size: contain;
   background-color: #e0e8ff; }
   main .order-summary {
-    max-width: 25%;
-    min-width: 450px;
-    max-width: 450px;
+    width: 30%;
     max-height: 700px; }
     main .order-summary .image {
       width: 100%; }
